--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ a.site-nav:hover {
 #sidebar {
     float: left;
     width: 30%;
-	border: 1px dashed #d5d5d5;
+	/*border: 1px dashed #d5d5d5;*/
 }
 
 #sidebar-right {
@@ -152,7 +152,7 @@ a.site-nav:hover {
 #content-wrap {
     float: right;
     width: 65%;
-	border: 1px dashed #d5d5d5
+	/*border: 1px dashed #d5d5d5*/
 }  
 
 #content-wrap-left {
